force-app/main/default/objects/SandboxSetup__c/SandboxSetup__c.object-meta.xml
<CustomObject>
    <description>Used to setup sandboxes for remote user setup. A user will be able to request setup on a sandbox from production</description>
    <label>Sandbox Setup</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Sandbox Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sandbox Setups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>