force-app/main/default/objects/SandboxSetup__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>A description of the sandbox that will be displayed to the users</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>