force-app/main/default/objects/SandboxSetup__c/fields/EmailToSendRequests__c.field-meta.xml
<CustomField>
    <fullName>EmailToSendRequests__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the email address to the sandbox that will accept the requests. It is a text field because an email field type is 80 characters. If an email address is not provided, it will queue up the requests and send them out once the email is populated.</inlineHelpText>
    <label>Email To Send Requests</label>
    <length>120</length>
    <type>Text</type>
</CustomField>