force-app/main/default/objects/SandboxSetup__c/fields/SortOrder__c.field-meta.xml
<CustomField>
    <fullName>SortOrder__c</fullName>
    <inlineHelpText>The order these setups will display in the list</inlineHelpText>
    <label>Sort Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>